# lib/api-spec/openapi.yaml
@@ -711,6 +711,8 @@ components:
           type: ["string", "null"]
         department:
           type: ["string", "null"]
+        batch:
+          type: ["string", "null"]
       required: [username, password, fullName, email, role]
     User:
       type: object
@@ -725,6 +727,8 @@ components:
         studentId:
           type: ["string", "null"]
         department:
+          type: ["string", "null"]
+        batch:
           type: ["string", "null"]
         avatarUrl:
           type: ["string", "null"]
@@ -876,6 +880,8 @@ components:
         studentId:
           type: ["string", "null"]
         department:
+          type: ["string", "null"]
+        batch:
           type: ["string", "null"]
         message:
           type: ["string", "null"]
